# aoc-22

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
aoc_22/day_01/: src.py
aoc_22/day_02/: src.py  test_day_02.py
aoc_22/day_03/: src.py  test_day_03.py
aoc_22/day_04/: src.py  test_day_04.py
aoc_22/day_05/: src.py  test_day_05.py
aoc_22/day_06/: src.py  test_day_06.py
aoc_22/day_07/: input.txt  src.py  test_day_07.py
aoc_22/day_08/: src.py  test_day_08.py
aoc_22/day_09/: src.py  test_day_09.py
aoc_22/day_10/: src.py  test_day_10.py
aoc_22/scripts/: new_day.py
aoc_22/utils/: read_in.py
day_01/: src.py
day_02/: src.py  tests.py
day_03/: src.py  tests.py
day_04/: src.py  tests.py
