[tool.poetry]
name = "aoc-22"
version = "0.1.0"
description = ""
authors = ["jonathan.kerr <jonathan.kerr@digital.cabinet-office.gov.uk>"]
readme = "README.md"
packages = [{include = "aoc_22"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
