[tool.poetry]
name = "aoc-22"
version = "0.1.0"
description = ""
authors = ["jonathan.kerr <jonathan.kerr@digital.cabinet-office.gov.uk>"]
readme = "README.md"
packages = [{include = "aoc_22"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
pre-commit = "^2.20.0"
click = "^8.1.3"
gitpython = "^3.1.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
new_day = 'aoc_22.scripts.new_day:create_new_day'
